# base58

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/: FUNDING.yml
.github/workflows/: standalone.yml
include/base58/: base58.h
source/: base58.cpp
test/: CMakeLists.txt
test/source/: base58.cpp  base58bench.cpp  reference.cpp  reference.h
